objects/ASI_eForm_IT_Change_Request_Item__c.object
<CustomObject>
    <fields>
        <fullName>ASI_eForm_Context__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Context</label>
        <referenceTo>ASI_eForm_Context__c</referenceTo>
        <relationshipLabel>IT Change Request Items</relationshipLabel>
        <relationshipName>IT_Change_Request_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_External_Email__c</fullName>
        <formula>ASI_eForm_Context__r.ASI_eForm_External_Email__c</formula>
        <label>External Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_IT_Action__c</fullName>
        <label>IT Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IT Acknowledged</fullName>
                </value>
                <value>
                    <fullName>Invalid Submission</fullName>
                </value>
                <value>
                    <fullName>Work In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_IT_Change_Request__c</fullName>
        <label>IT Change Request</label>
        <referenceTo>ASI_eForm_IT_Change_Request__c</referenceTo>
        <relationshipLabel>Context Details</relationshipLabel>
        <relationshipName>IT_Change_Request_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_IT_Feedback__c</fullName>
        <formula>IF( !ISPICKVAL( ASI_eForm_IT_Change_Request__r.ASI_eForm_Status__c , &quot;Final&quot;)&amp;&amp;  ISBLANK(  ASI_eForm_IT_Change_Request__r.ASI_eForm_sys_resubmit__c )  , &quot;&quot;, Text( ASI_eForm_IT_Action__c ))</formula>
        <label>IT Feedback</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_IT_Handle_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IT Handle By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IT_Change_Request_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_IT_Remarks__c</fullName>
        <label>IT Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Responsible_By__c</fullName>
        <formula>ASI_eForm_Context__r.ASI_eForm_Responsible_By__c</formula>
        <label>Responsible By</label>
        <type>Text</type>
    </fields>
    <label>IT Change Request Item</label>
    <nameField>
        <displayFormat>ITCRI-{0000000}</displayFormat>
        <label>Item No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IT Change Request Items</pluralLabel>
    <recordTypes>
        <fullName>ASI_eForm_IT_Change_Request_Item</fullName>
        <active>true</active>
        <label>IT Change Request Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ASI_eForm_Lock_IT_Action</fullName>
        <active>false</active>
        <errorConditionFormula>(ISPICKVAL(ASI_eForm_IT_Change_Request__r.ASI_eForm_Status__c, &apos;Draft&apos;) || ISPICKVAL( ASI_eForm_IT_Change_Request__r.ASI_eForm_IT_Action__c , &apos;Complete&apos;)) &amp;&amp;  ISCHANGED(ASI_eForm_IT_Action__c)</errorConditionFormula>
        <errorMessage>Cannot modify IT Action on a Draft or Complete IT Change Request Header.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_eForm_Protect_Complete_Line</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( ASI_eForm_IT_Action__c , &quot;Complete&quot;) &amp;&amp; !ISPICKVAL(  ASI_eForm_IT_Change_Request__r.ASI_eForm_IT_Action__c, &quot;Complete&quot;) &amp;&amp;  ISCHANGED( ASI_eForm_Context__c )</errorConditionFormula>
        <errorDisplayField>ASI_eForm_Context__c</errorDisplayField>
        <errorMessage>You are not allowed to modify the item, because this item is already complete by IT</errorMessage>
    </validationRules>
</CustomObject>